[project]
name = "llm-agent-smith"
version = "0.1.0"
description = ""
authors = [
    {name = "danilo",email = "natan.danilo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "llm_agent_smith", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
